# gooroom-feedback

./: README.md  makemo  meson.build
config/: gooroom-feedback.conf
data/: gooroom-feedback.desktop.in  meson.build
debian/: changelog  control  debhelper-build-stamp  files  install  rules
po/: POTFILES  ko.po  meson.build
resources/: gooroom-feedback-dialog.ui  gooroom-feedback.css  gooroom-feedback.gresource.xml  gooroom-feedback.ui
server/: gooroom-feedback-server.go
src/: gooroom-feedback-application.c  gooroom-feedback-application.h  gooroom-feedback-cp.ui  gooroom-feedback-dialog.c  gooroom-feedback-dialog.h  gooroom-feedback-history-view.c  gooroom-feedback-history-view.h  gooroom-feedback-main.c  gooroom-feedback-utils.c  gooroom-feedback-utils.h  gooroom-feedback-window.c  gooroom-feedback-window.h
